--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-USER_NAME='sunny'
-USER_PASSWORD='sunny123'
+ACCESS_TOKEN_SECRET=project
+ENCWORD=secret
+DATABASEURL=mongodb+srv://abhinav123:abhinav123@cluster0.ozslk.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+PORT=6000
