--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ACCESS_TOKEN_SECRET=project
 ENCWORD=secret
-DATABASEURL=mongodb+srv://abhinav123:abhinav123@cluster0.ozslk.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASEURL=mongodb+srv://abhinav123:abhinav123@cluster0.ozslk.mongodb.net/ngage?retryWrites=true&w=majority
 PORT=6000
