--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@typegoose/typegoose": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/crypto-js": "^4.1.1",
+    "bcrypt": "^5.1.0",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
