--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "@types/bcrypt": "^5.0.0",
     "@types/crypto-js": "^4.1.1",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.33.0",
     "crypto-js": "^4.1.1",
+    "datauri": "^4.1.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "tmp": "^0.2.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.18",
+    "@types/tmp": "^0.2.3",
     "dotenv": "^16.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
