--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/crypto-js": "^4.1.1",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.33.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "datauri": "^4.1.0",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.0",
