--- a/.env
+++ b/.env
@@ -1,9 +1,4 @@
 ACCESS_TOKEN_SECRET=project
 ENCWORD=secret
-DATABASEURL=mongodb+srv://abhinav123:abhinav123@cluster0.ozslk.mongodb.net/ngage?retryWrites=true&w=majority
+DATABASEURL=mongodb+srv://abhinav123:abhinav123@cluster0.ozslk.mongodb.net/interview?retryWrites=true&w=majority
 PORT=3001
-
-cloud_name=dzxuucwzl 
-api_key=651143966274193
-api_secret=J0jtWkfpRPMikQEjoO2et0d9Mcg
-folder_name=ngage
